<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_history"
        android:title="@string/action_clear_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nearby_services"
        android:title="@string/action_nearby_services"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gas_stations"
        android:title="@string/action_gas_stations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ev_stations"
        android:title="@string/action_ev_charging"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="Изход"
        app:showAsAction="never" />
</menu>